refacto part 2
Signed-off-by: Rehili Ghazwa <ghazwarhili@gmail.com>